2003-11-04 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* README: cleanup of media files, moved to purple.
	* src/components/ogre/MediaDeployer.(h|cpp):
	added class to deploy media on demand.

2003-10-30 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/services/components/ogre:
	Makefile.am, DimeOgre.(h|cpp), ConsoleObjectImpl.(h|cpp):
	Moved Ogre response to console commands from the app
	to its own class, ConsoleObjectImpl.

2003-10-29 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/services/components/ogre/: DimeOgre.(h|cpp):
	Added ConsoleObject inheritance, it runs the Quit command.
	* configure.ac, src/main/Application.cpp and some Makefile.am's:
	Removed DataModel inclusion.
	Commented out boost check while configuring: it's not needed
	at this time. One less dependancy!

2003-10-27 Miguel Guzman <aglanor [at] telefonica [dot] net>
        * src/services/components/ogre/: Console.cpp, InputManager.cpp:
	Cleanup of traces. Added F11 to write the slash.
	* AUTHORS: removed Razor123. To the extent of my knowledge
	this person didn't contribute any code to Dime.
	Razor123 is of course welcomed into the Dime team, and when he
	contributes actual code he'll be restored as author.

2003-10-25 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* src/services/components/ogre/: Makefile.am,
	Console.(h|cpp), InputManager.(h|cpp), DimeOgre.cpp:
	Added InputManager and Console from Die (thanks to 
	wolfman8k). 
	Press ~ or F12 to show the console. The console is not 
	funtional yet (to be done ASAP).
	As keyboard controls are disabled atm, the program
	exits after 600 rendered frames.
	* configure.ac: added /user/local/lib/Ogre/Plugin_GuiElements.so
	to LDFLAGS. This is harcoded and an ugly hack, but I don't know
	if Ogre has a way to add Plugin so's with the autotools.

2003-10-25 Lee Begg <llnz@paradise.net.nz>
	* src/services/sound/SoundService.(h|cpp): Made SoundService a bit
	more generic. Removed most includes from header.
