@@ -1,3 +1,3 @@
-SUBDIRS = debug ogre
+SUBDIRS = debug ogre text
 
 EXTRA_DIST = State.h WidgetInfo.h
