@@ -1,0 +1,212 @@
+/*
+	EmberText.cpp by Miguel Guzman (Aglanor)
+	Copyright (C) 2002 Miguel Guzman & The Worldforge Project
+
+	This program is free software; you can redistribute it and/or modify
+	it under the terms of the GNU General Public License as published by
+	the Free Software Foundation; either version 2 of the License, or
+	(at your option) any later version.
+
+	This program is distributed in the hope that it will be useful,
+	but WITHOUT ANY WARRANTY; without even the implied warranty of
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	GNU General Public License for more details.
+
+	You should have received a copy of the GNU General Public License
+	along with this program; if not, write to the Free Software
+	Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+*/
+
+// config headers
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
+// system headers
+
+// library headers
+#include <iostream>
+//#include <string>
+// Headers to stop compile problems from headers
+#include <stdlib.h>
+
+//Dime headers
+#include "services/DimeServices.h"
+#include "services/logging/LoggingService.h"
+#include "services/server/ServerService.h"
+#include "services/config/ConfigService.h"
+#include "services/metaserver/MetaserverService.h"
+#include "framework/ConsoleBackend.h"
+
+// local headers
+#include "EmberText.h"
+
+
+// TODO: move CerrLogObserver to its own class (under Logging service, or under Framework)
+  class CerrLogObserver: public dime::LoggingService::Observer
+    {
+    public:
+        CerrLogObserver()
+        {
+        }
+
+        virtual void onNewMessage(const std::string & message, const std::string & file, const int & line,
+                                  const dime::LoggingService::MessageImportance & importance, const time_t & timeStamp)
+        {
+            tm * ctm = localtime(&timeStamp); //currentLocalTime was too long, sorry
+		
+	    std::cerr.fill('0');
+            std::cerr << "[";
+	    std::cerr.width(2);
+	    std::cerr << (ctm->tm_year/*+1900*/)%100 << "-";
+	    std::cerr.width(2);
+	    std::cerr << ctm->tm_mon+1 << "-";
+	    std::cerr.width(2);
+	    std::cerr << ctm->tm_mday << " ";
+	    std::cerr.width(2);
+	    std::cerr << ctm->tm_hour << ":";
+	    std::cerr.width(2);
+	    std::cerr <<  ctm->tm_min << ":";
+	    std::cerr.width(2);
+	    std::cerr << ctm->tm_sec << "] ";
+	    std::cerr  << "[File: " << file << ", Line #:" <<  line << "] (";
+
+            if(importance == dime::LoggingService::CRITICAL)
+                {
+                    std::cerr << "CRITICAL";
+                }
+            else  if(importance == dime::LoggingService::FAILURE)
+                {
+                    std::cerr << "FAILURE";
+                }
+            else if(importance == dime::LoggingService::WARNING)
+                {
+                    std::cerr << "WARNING";
+                }
+            else if(importance == dime::LoggingService::INFO)
+                {
+                    std::cerr << "INFO";
+                }
+	    else
+                {
+                    std::cerr << "VERBOSE";
+                }
+            std::cerr << ") " <<message << std::endl;
+        }
+
+    private:
+
+    };
+
+void EmberText::init()
+{
+	myBackend = dime::ConsoleBackend::getMainConsole();
+	initializeDimeServices();
+	std::cout << "EmberText initialised" << std::endl;
+	return;
+}
+
+
+void EmberText::initializeDimeServices(void)
+{
+	// Initialize dime services
+
+	// Initialize the Logging service and an error observer
+	dime::LoggingService *logging = dime::DimeServices::getInstance()->getLoggingService();
+	CerrLogObserver* obs = new CerrLogObserver();
+	obs->setFilter(dime::LoggingService::VERBOSE);
+	logging->addObserver(obs);
+
+
+	// Initialize the Configuration Service
+	dime::DimeServices::getInstance()->getConfigService()->start();
+
+
+/*
+	// Initialize the Sound Service
+#ifndef WIN32
+	// Test that /dev/dsp is availible
+	FILE *temp = fopen("/dev/dsp","w");
+	if (temp) {
+	  fclose(temp);
+#endif
+	// Initialize the SoundService
+	dime::DimeServices::getInstance()->getSoundService()->start();
+#ifndef WIN32
+	}
+#endif
+*/
+
+	// Initialize and start the Metaserver Service.
+#if defined( _MSC_VER ) && ( _MSC_VER < 1300 )
+	// GNDN: MSVC < version 7 is broken
+#else
+	// Set Eris Logging Level
+	Eris::setLogLevel(Eris::LOG_DEBUG);
+
+	// Initialize the Metaserver Service
+	dime::DimeServices::getInstance()->getMetaserverService()->start();
+
+	// Initialize the Server Service
+	dime::DimeServices::getInstance()->getServerService()->start();
+#endif
+
+
+
+}
+
+
+
+void EmberText::loop()
+{
+
+int n=10;
+std::string command;
+while(n>=0)
+{
+	std::cout << ">>> ";
+	std::getline(std::cin,command);
+	std::cout << command << std::endl;
+
+	// run the command
+	myBackend->runCommand(command);
+
+	// Display all console queued messages
+	const std::list<std::string> msgs = myBackend->getConsoleMessages();
+	std::list<std::string>::const_iterator index = msgs.begin();
+	std::list<std::string>::const_iterator end = msgs.end();
+	while( index != end )
+	{
+		std::cout << "... " << *index << std::endl;
+		++index;
+	}
+
+	n--;
+}
+
+
+}
+
+
+// ----------------------------------------------------------------------------
+// Main function, just boots the application object
+// ----------------------------------------------------------------------------
+//#if OGRE_PLATFORM == PLATFORM_WIN32
+//#define WIN32_LEAN_AND_MEAN
+//#include "windows.h"
+//INT WINAPI WinMain( HINSTANCE hInst, HINSTANCE, LPSTR strCmdLine, INT )
+//#else
+int main(int argc, char **argv)
+//#endif
+{
+    // Create application object
+	EmberText app;
+
+	// Initialise
+	app.init();
+
+	// Run
+	app.loop();
+
+    return 0;
+}
